[gd_scene load_steps=14 format=2]

[ext_resource path="res://PlayerNode.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://parede.png" type="Texture" id=3]
[ext_resource path="res://WallNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://bater_asas.mp3" type="AudioStream" id=5]
[ext_resource path="res://morcego_1.png" type="Texture" id=6]
[ext_resource path="res://morcego_2.png" type="Texture" id=7]
[ext_resource path="res://morcego_3.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 31 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 11.75, 176 )

[node name="World" type="Node2D"]
position = Vector2( 320, 184 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 256.0
margin_top = 16.0
margin_right = 384.0
margin_bottom = 56.0
bbcode_enabled = true
bbcode_text = "[center]Pontuação: 0[/center]"
text = "Pontuação: 0"

[node name="PlayerNode" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="UpperFloorNode" type="Node2D" parent="PlayerNode"]
position = Vector2( 0, -200 )
scale = Vector2( 3, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="PlayerNode/UpperFloorNode"]

[node name="Sprite" type="Sprite" parent="PlayerNode/UpperFloorNode/StaticBody2D"]
scale = Vector2( 6, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/UpperFloorNode/StaticBody2D"]
shape = SubResource( 1 )

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PlayerNode/Player"]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Timer" type="Timer" parent="PlayerNode/Player"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="PlayerNode/Player"]
frames = SubResource( 4 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]
scale = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -360, 0 )
shape = SubResource( 5 )

[node name="LowerFloorNode" type="Node2D" parent="PlayerNode"]
position = Vector2( 0, 200 )
scale = Vector2( 3, 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="PlayerNode/LowerFloorNode"]

[node name="Sprite" type="Sprite" parent="PlayerNode/LowerFloorNode/StaticBody2D"]
scale = Vector2( 6, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/LowerFloorNode/StaticBody2D"]
shape = SubResource( 1 )

[node name="WallGroup" type="Node2D" parent="."]

[node name="WallNode" parent="WallGroup" instance=ExtResource( 4 )]
position = Vector2( 352, 0 )

[node name="WallNode2" parent="WallGroup" instance=ExtResource( 4 )]
position = Vector2( 448, 0 )

[node name="WallNode3" parent="WallGroup" instance=ExtResource( 4 )]
position = Vector2( 736, 0 )

[node name="WallNode4" parent="WallGroup" instance=ExtResource( 4 )]
position = Vector2( 640, 0 )

[node name="WallNode5" parent="WallGroup" instance=ExtResource( 4 )]
position = Vector2( 544, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
